# make.env

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
make_env/: __init__.py  __main__.py
tests/: test_make_env.py
tests/integration/: .env.test  Makefile.test  test.bats
tests/unit/: test_doctest.py  test_make_env.py
