[tool.poetry]
name = "make.env"
version = "0.0.1"
description = "wraps make command with the ability to load .env files"
authors = ["smac89 <nobleman.code@gmx.com>"]
license = "MIT"
classifiers = []
repository = "https://github.com/smac89/make.env"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"

[tool.poetry.scripts]
make.env = "make_env"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
